# Greenly

apps/app/: pubspec.yaml
apps/app/lib/: main.dart
apps/web/: components.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/app/: app.css
apps/web/src/: routeTree.gen.ts
apps/web/src/components/auth/: FormLogin.tsx
apps/web/src/routes/: index.tsx
apps/web/src/routes/auth/: login.tsx  regiister.tsx
infra/: docker-compose.dev.yml  messagging.md
services/catalog-service/: Dockerfile.dev  go.mod
services/catalog-service/cmd/: main.go
services/core-service/: Dockerfile.dev  eslint.config.mjs  package.json  pnpm-lock.yaml
services/core-service/prisma/: schema.prisma
services/core-service/prisma/migrations/20260221151236_init/: migration.sql
services/core-service/prisma/migrations/20260221153923_add_auth_init/: migration.sql
services/core-service/src/: app.module.ts  main.ts
services/core-service/src/common/utils/: email.ts  random-avatar.ts
services/core-service/src/database/: database.service.ts
services/core-service/src/libs/: libs.module.ts
services/core-service/src/libs/config/: env.config.ts
services/core-service/src/libs/database/: database.service.ts
services/core-service/src/libs/errors/: app.error.ts  handler.error.ts
services/core-service/src/libs/filters/: global-exception.filter.ts
services/core-service/src/libs/interceptors/: respon.interceptor.ts
services/core-service/src/modules/: modules.module.ts
services/core-service/src/modules/auth/: auth.dto.ts  (+4 more)
services/ml-engine/: Dockerfile.dev  pyproject.toml
(+4 files in other folders)
