[project]
name = "ml-engine"
version = "0.1.0"
description = "ML service with FastAPI, Celery, RabbitMQ & FAISS"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # HTTP client (HuggingFace API)
    "httpx>=0.27.0",

    # Validation
    "pydantic>=2.6.0",

    # Background job
    "celery>=5.3.0",

    # RabbitMQ transport
    "amqp>=5.2.0",

    # Vector search
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0"
]